feat: add base task for main and set up localhost as a server

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,4 @@
+# [default_server]
+# 192.168.43.128 ansible_user=haalloobim
 [default_server]
-192.168.43.128 ansible_user=haalloobim
+localhost ansible_connection=local
