feat: completing nginx prepare

--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -2,14 +2,14 @@
   hosts: all
   become: true
   tasks:
-    - name: Include and run prepare playbooks
-      include_tasks: playbooks/prepare.yml
+    - name: Include and run prepare tasks
+      include_tasks: prepare.yml
 
-    - name: Include and run build playbooks
-      include_tasks: playbooks/build.yml
+    # - name: Include and run build playbooks
+    #   include_tasks: playbooks/build.yml
 
-    - name: Include and run migrate playbooks
-      include_tasks: playbooks/migrate.yml
+    # - name: Include and run migrate playbooks
+    #   include_tasks: playbooks/migrate.yml
 
-    - name: Include and run deploy playbooks
-      include_tasks: playbooks/deploy.yml
+    # - name: Include and run deploy playbooks
+    #   include_tasks: playbooks/deploy.yml
