--- a/playbooks/prepare.yml
+++ b/playbooks/prepare.yml
@@ -1,5 +1,6 @@
-- name: Running Prepare Playbooks
+- name: Running nginx-prepare
   hosts: all
   become: true
   roles: 
     - roles/nginx-prepare
+    - roles/mysql-prepare
