--- a/roles/nginx-prepare/tasks/main.yml
+++ b/roles/nginx-prepare/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
-tasks file for nginx-prepare
-- name: update Depedency
-  apt:
-    update_cache: yes
-  become: yes
-  tags: update
+#tasks file for nginx-prepare
+# - name: update Depedency
+#   apt:
+#     update_cache: yes
+#   become: yes
+#   tags: update
 
 - name: Install nginx
   package:
