--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -1,5 +1,6 @@
 - import_playbook: prepare.yml
 - import_playbook: build.yml
+- import_playbook: migrate.yml
 
 - name: Running All Playbooks
   hosts: all
