feat: add FE-build roles v1

--- a/roles/backend-build/vars/main.yml
+++ b/roles/backend-build/vars/main.yml
@@ -1,6 +1,4 @@
 ---
 # vars file for backend-build
-db_name: 'pelatihan'
-db_user: 'root'
-db_password: ''
-db_host: 'localhost'
+vars_files:
+  - /env/vars.yml
