--- a/roles/frontend-build/tasks/main.yml
+++ b/roles/frontend-build/tasks/main.yml
@@ -12,30 +12,6 @@
     name: curl
     state: present
 
-- name: Move nvm install links to /tmp file
-  become: true
-  get_url:
-    url: "https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh"
-    dest: "/tmp/install_nvm.sh"
-
-- name: Execute nvm install script
-  become: true
-  shell: "bash /tmp/install_nvm.sh"
-  args:
-    creates: "{{ ansible_user_dir }}/.nvm"
-
-- name: Source .bashrc
-  become: true
-  shell: "source ~/.bashrc"
-  args:
-    executable: /bin/bash
-
-- name: Remove nvm install links in /tmp
-  become: true
-  file:
-    path: "/tmp/install_nvm.sh"
-    state: absent
-
 - name: Add Yarn GPG public key
   become: true
   shell: "curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -"
@@ -44,3 +20,57 @@
   become: true
   shell: "echo 'deb https://dl.yarnpkg.com/debian/ stable main' | sudo tee /etc/apt/sources.list.d/yarn.list"
   notify: Update apt package cache
+
+- name: Install Yarn package
+  become: true
+  apt:
+    name: yarn
+    state: present
+    update_cache: yes
+
+- name: Add safe directory for Git
+  community.general.git_config:
+    name: safe.directory
+    value: /var/www/fe-todo
+    add_mode: add
+    scope: global
+
+- name: Cloning FE Repository
+  git:
+    repo: https://github.com/elshiraphine/fe-todo.git
+    dest: /var/www/fe-todo
+    version: main
+    force: yes
+
+- name: Change permission in FE Repository
+  file:
+    path: /var/www/fe-todo
+    mode: '0777'
+    recurse: yes
+  become: true
+
+- name: See Package.json content
+  shell: "cat /var/www/fe-todo/package.json"
+  become: true
+
+- name: Install nvm
+  shell: >
+    curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh  | sh
+    creates=~/.nvm/nvm.sh
+
+- name: Install node and set version
+  shell: >
+    /bin/bash -c "source ~/.nvm/nvm.sh && nvm install 18 && nvm alias default 18"
+    creates=~/.nvm/alias
+
+- name: Check nvm version
+  shell: > 
+    /bin/bash -c "source ~/.nvm/nvm.sh && nvm --version"
+
+- name: Installing PM2 package
+  become: true
+  npm:
+    name: pm2
+    global: yes
+    state: present
+
