feat: completinf FE roles

--- a/roles/nginx-prepare/handlers/main.yml
+++ b/roles/nginx-prepare/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 # handlers file for nginx-prepare
-- name: Restarting Nginx...
+- name: Restart nginx
   service:
     name: nginx
     state: restarted
