--- a/roles/nginx-prepare/tasks/main.yml
+++ b/roles/nginx-prepare/tasks/main.yml
@@ -34,6 +34,12 @@
     rule: allow
     port: 9000
 
+- name: Allow Port 8000
+  become: true
+  community.general.ufw:
+    rule: allow
+    port: 8000
+
 - name: Allow SSH Port
   become: true
   community.general.ufw:
